# Data-Compression

./: README.md
Data-Compression/: Data-Compression.sln
Data-Compression/Data-Compression/: Data-Compression.cpp  Data-Compression.vcxproj  Data-Compression.vcxproj.filters  HuffTree.cpp  HuffTree.h
Data-Compression/Data-Compression/x64/Debug/: Data-Compression.exe.recipe  Data-Compression.ilk  vc143.idb
Data-Compression/Data-Compression/x64/Debug/Data-Compression.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Data-Compression.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Data-Compression/text/: poem.txt
Huffman_GUI/: CMakeLists.txt  License.txt
Huffman_GUI/prj/: CMakeLists.txt
Huffman_GUI/prj/huffman/: CMakeLists.txt  HuffTree.cpp  HuffTree.h  huffman-compression.cpp
Huffman_GUI/prj/text/: encoded.txt  poem.txt  poem2.txt
text/: poem3.txt
